1. Refactored loading logic to datautil.py  2. Added naive ratio strategy  3. Added function to save schedule

--- a/cfg/sample_config.yaml
+++ b/cfg/sample_config.yaml
@@ -1,2 +1,6 @@
-trip_data_path: ./data/hashcode.in
-schedule_data_path: ./schedule/average.in
+map_path: ./data/hashcode.in
+schedule_path: ./schedule/average.in
+strategy:
+  name: naiveratio
+  config:
+    period: 10
