1. change map data from ./data to ./map  2. Added simulation code

--- a/cfg/sample_config.yaml
+++ b/cfg/sample_config.yaml
@@ -1,4 +1,4 @@
-map_path: ./data/hashcode.in
+map_path: ./map/hashcode-kaggle.in
 schedule_path: ./schedule/average.in
 strategy:
   name: naiveratio
