1. Removed unused debug message in DataManager  2. Use orjson instead of pyyaml for result as pyyaml is super slow, updated dependencies accordingly  3. Improve simulation running speed

--- a/cfg/sample_config.yaml
+++ b/cfg/sample_config.yaml
@@ -1,6 +1,6 @@
 map_path: ./map/hashcode-kaggle.in
-schedule_path: ./schedule/naiveratio.in
-result_path: ./result/naiveratio.yaml
+schedule_path: ./schedule/naiveratio.out
+result_path: ./result/naiveratio.json
 strategy:
   name: naiveratio
   config:
