1. Started work on new strategy synchronise, trying to estimate time of arrival for better order of green lights

--- a/cfg/sample_config.yaml
+++ b/cfg/sample_config.yaml
@@ -1,6 +1,6 @@
 map_path: ./map/hashcode-kaggle.in
 schedule_path: ./schedule/naiveratio.out
-result_path: ./result/naiveratio.json
+result_dir: ./result/naiveratio/
 strategy:
   name: naiveratio
   config:
